# geomagnetic_mfdfa

./: CITATION.cff  Condensed_README.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: exploratory_analysis.ipynb
results/tables/: quick_acf.csv  quick_mfdfa_hq.csv  quick_spectrum.csv
src/gsmf/: __init__.py  __main__.py
src/gsmf/analysis/: __init__.py  correlation_analysis.py  surrogate_tests.py  windowed_analysis.py
src/gsmf/io/: __init__.py  geomag.py  seismic.py  time.py
src/gsmf/multifractal/: __init__.py  cross_mfdfa.py  mfdfa.py  spectrum.py  structure_functions.py
src/gsmf/plotting/: __init__.py  correlation.py  mfdfa.py  spectrum.py  structure_functions.py
src/gsmf/preprocessing/: __init__.py  detrending.py  filters.py  segmentation.py
tests/: test_smoke.py
