
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsmf"
version = "0.1.0"
description = "Geomagnetic–Seismic Multifractal Analysis (MF-DFA, MF-X-DFA, DCCA framework)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}  # Change if you choose another license
authors = [
    {name = "Klaudio Peqini"}
]
keywords = [
    "geomagnetism",
    "seismology",
    "multifractal",
    "MF-DFA",
    "MF-X-DFA",
    "DCCA",
    "time-series",
    "scaling"
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.65"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff"
]
acceleration = [
    "numba>=0.58"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
