[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsmf"
version = "0.1.0"
description = "Geomag–Seismic Multifractal analysis toolkit (MFDFA, structure functions, spectrum, cross-MFDFA)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Klaudio Peqini"}]
keywords = ["multifractal", "MFDFA", "geomagnetism", "seismology", "time-series"]
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scipy>=1.9",
  "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.5"]

[project.scripts]
gsmf-quick = "gsmf.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
